Removed Posts and Added New Layouts for Home and Other Pages

--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,8 @@ name: MIT Club of Boston
 pygments: true
 markdown: rdiscount
 baseurl: /mit-cob-redesign
+navigation:
+  - about
+  - events
+  - news
+  - "Contact Us"
