Removed Capitalize Filter for Navbar
I prefer not to waste time bending this to my will. Just add items to the config file as they should appear onscreen.

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ pygments: true
 markdown: rdiscount
 baseurl: /mit-cob-redesign
 navigation:
-  - about
-  - events
-  - news
+  - About
+  - Events
+  - News
   - "Contact Us"
